# stellarforge

./: .gitignore  .gitleaks.toml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-audit.yml  labeler.yml  secret-scanning.yml
docs/: templates.md  usage.md
scripts/: seed-issues.sh
templates/counter/: Cargo.toml
templates/counter/src/: lib.rs
templates/counter/test_snapshots/test/: increments.1.json
templates/escrow/: Cargo.toml
templates/escrow/src/: lib.rs
templates/escrow/test_snapshots/test/: cannot_double_settle.1.json  refund_returns_payer.1.json  rejects_zero_amount.1.json  release_pays_payee.1.json
