[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "A minimal two-party Soroban escrow — the StellarForge 'escrow' starter template."

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
